[r] 937 - fix logo to align to homepage
[#181708937](https://www.pivotaltracker.com/story/show/181708937)

--- a/static/css/signin.scss
+++ b/static/css/signin.scss
@@ -10,7 +10,7 @@
     content: url(/static/resources/movey_logo.svg);
     top: 0;
     position: sticky;
-    padding: 2rem 3rem;
+    padding: 30px;
   }
 
   .login-card-container {
